link, image tags

--- a/pf.html
+++ b/pf.html
@@ -2,10 +2,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-     <p>Hello World!</p>
+    #HTML paragraphs are defined with the <p> tag
+     <h1>Hi! I'm Bbojja!</h1>
+    #h size 1 > 2 > 3 >>>. 
+     <h3> I like chicken! do you like it? </h3>
+     <h3> I'm 6 years old dog! </h3>
     </head>
 
     <body>
-        <img src="./img/BBOJJA.jpeg">
+    #HTML links are defined with the '<a>' tag:
+    #The link's destination is specified in the href attribute.
+    <h3><a href="https://yuhengsa.org">This is a link</a></h3>
+    #HTML images are defined with the <img> tag.
+    #The source file (src), alternative text (alt), width, and height are provided as attributes:
+    <img src="./img/BBOJJA.jpeg" alt=https://yuhengsa.org width=200 height="200">
     </body>
 </html>
