--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-# this is a file for portfolio
+# this is a file for bbojja
 <!DOCTYPE html>
 <html>
     <head>
     #HTML paragraphs are defined with the <p> tag
      <h1>Hi! I'm Bbojja!</h1>
     #h size 1 > 2 > 3 >>>. 
-     <h3> I like chicken! do you like it? </h3>
+     <h3> I love my family! </h3>
      <h3> I'm 6 years old dog! </h3>
     </head>
 
